# agri-fi

./: CONTRIBUTING.md  README.md  docker-compose.yml  test.md
.github/workflows/: auto-merge.yml  backend-ci.yml  frontend-ci.yml  pr-review-bot.yml
backend/: .env.example  generate-openapi.js  jest.e2e.config.js  openapi.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/docs/: API.md
backend/scripts/: test-logging.ts
backend/src/: app.module.ts  main.ts
backend/src/auth/: admin.controller.ts  auth.controller.spec.ts  auth.controller.ts  auth.service.spec.ts  auth.service.ts
backend/src/escrow/: escrow.consumer.ts  escrow.main.ts  escrow.module.ts  escrow.service.spec.ts  escrow.service.ts
backend/src/health/: health.controller.ts
backend/src/investments/: investments.controller.spec.ts  investments.controller.ts  investments.service.spec.ts  investments.service.ts
blockchain/: Cargo.toml  README.md
blockchain/contracts/farm_campaign/: Cargo.toml
blockchain/contracts/farm_campaign/src/: lib.rs
blockchain/contracts/marketplace_settlement/: Cargo.toml
blockchain/contracts/marketplace_settlement/src/: lib.rs
blockchain/contracts/project_factory/: Cargo.toml
blockchain/contracts/project_factory/src/: lib.rs
blockchain/contracts/revenue_distributor/: Cargo.toml
blockchain/contracts/revenue_distributor/src/: lib.rs
blockchain/scripts/: deploy-and-integrate.mjs  deploy.sh
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/lib/: api.ts  (+3 more)
(+100 files in other folders)
